Adds react components for comments

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,28 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
+}
+
+.comment {
+    border-bottom: 1px solid #333;
+}
+
+.comment:first-of-type {
+    border-top: 1px solid #333;
+}
+
+.commentAuthor {
+    color: #ccc;
+    padding: 0;
+}
+
+.commentForm {
+    border: 1px solid #ccc;
+    margin-top: 15px;
+    padding: 10px;
 }
